# mcp-configs

./: MCP_TRANSPORT_COMPARISON.md  Makefile  README.md  client.py  pyproject.toml  server.py
.devcontainer/: devcontainer.json
docs/: http-stateful-messages.md  http-stateless-messages.md  sse-messages.md
