[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-mcp"
version = "0.1.0"
description = "Python MCP (Model Context Protocol) Server Implementation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Suneet Nangia", email = "suneetnangia@users.noreply.github.com"}
]
keywords = ["mcp", "model-context-protocol", "fastmcp", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp",
    "mcp>=1.0.0",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.28.1",
    "requests>=2.31.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/suneetnangia/mcp-configs"
Repository = "https://github.com/suneetnangia/mcp-configs"
Issues = "https://github.com/suneetnangia/mcp-configs/issues"

[tool.setuptools]
py-modules = ["server", "client"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
